added formatting and tagging

--- a/src/content/blog/22-05-22-dynamo.md
+++ b/src/content/blog/22-05-22-dynamo.md
@@ -2,6 +2,7 @@
 slug: "intro-to-dynamo"
 date: "2022-05-22"
 title: "Introduction to DynamoDB Data Modelling"
+tags: ["AWS", "Databases", "Learning"]
 ---
 
 ## What is DynamoDB?
