--- a/src/content/blog/22-06-20-lombok.md
+++ b/src/content/blog/22-06-20-lombok.md
@@ -1,3 +1,10 @@
+---
+slug: "intro-to-lombok"
+date: "2022-05-22"
+title: "Introduction to Lombok"
+tags: ["Java", "Learning"]
+---
+
 # Introduction to Lombok
 
 ## What is Lombok?
